2009-03-20       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2.texi:  tidied up formatting.
	* gm2/gm2-compiler/M2GCCDeclare.mod:  introduced a
	  debugging watch for the lists.
	* gm2/gm2-compiler/P2SymBuild.mod:  added an
	  error check to ensure types are not declared as
	  themselves.
	* gm2/gm2-libs-ch/sckt.c:  exit if an error occurs.

2009-03-17       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2Quads.mod:  fixed a critical bug
	  in DEC.  Swapped operands for doBuildBinaryOp around
          when building a DEC.
	* gm2/gm2-libs-ch/sckt.c:  removed debugging printf's.

2009-03-14       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2GCCDeclare.mod:  modified debugging
	  catch.
	* gm2/gm2-compiler/SymbolTable.mod:  changed RequestSym
	  to GetDeclareSym in PutExportQualified and
	  PutExportUnQualified.
	* gm2/gm2-libs/SYSTEM.def:  removed export of SIZE.
	  (It is only added if -fpim2 is enabled).
	* gm2/gm2-libs-iso/TermFile.mod:  added debugging
	  comments.
        * gm2/gm2-libs-iso/wraptime.c:  added wraptime_
	  prefixes to exported procedures.
        * gm2/gm2-compiler/M2System.mod:  export SIZE if
	  -fpim2 is used (or -fpim but only if -fpedantic is not
	  set).
	* gm2/gm2-libs-iso/SYSTEM.def:  removed BITSET from export
	  list as it is pervasive in ISO Modula-2.
	* gm2/ulm-libs-gm2/sys/SYSTEM.def:  removed SIZE from export
	  list as it is exported internally depending upon -fpim2
	  and -fpedantic.
	* gm2/gm2-libs-coroutines/SYSTEM.def:  removed SIZE from export
	  list as it is exported internally depending upon -fpim2
	  and -fpedantic.

2009-03-09       Gaius Mulley <gaius@gnu.org>

	* gm2/Make-file.in:  added termios.def to
	  GM2-LIBS-BOOT-DEFS, GM2-LIBS-DEFS.  Added
	  termios.c to GM2-LIBS-C and added rules to build
	  gm2/gm2-libs-boot/termios.o, gm2/gm2-libs/termios.o,
	  gm2/gm2-libs/O2/termios.o, gm2/gm2-libs/SO/termios.o,
          gm2/gm2-libs/SO_O2/termios.o,
	  gm2/gm2-libs-paranoid/termios.o.  Removed rule to