@@ -210,7 +210,9 @@ int EXPORT(tcsetattr) (int fd, int option, struct termios *t)
 
 void EXPORT(cfmakeraw) (struct termios *t)
 {
+#if defined(HAVE_CFMAKERAW)
   return cfmakeraw (t);
+#endif
 }
 
 /*
