@@ -51,6 +51,7 @@ AC_CHECK_FUNCS(select)
 AC_CHECK_FUNCS(strsignal)
 AC_CHECK_FUNCS(strtod)
 AC_CHECK_FUNCS(strtold)
+AC_CHECK_FUNCS(cfmakeraw)
 
 #
 # library functions (used by gm2-libs and ulm-lib-gm2)
